# swarmcraft

./: .dockerignore  .env.example  .gitignore  .lefthook.yml  Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml
demo/: api_test.py  test_websocket.py
notebooks/: pso.ipynb  test.ipynb
src/swarmcraft/: config.py  main.py
src/swarmcraft/api/: routes.py  websocket.py
src/swarmcraft/core/: abc.py  landscape_visualizer.py  loss_functions.py  pso.py  swarm_base.py
src/swarmcraft/models/: session.py
src/swarmcraft/utils/: name_generator.py
svelte-frontend/: eslint.config.js  package-lock.json  package.json
svelte-frontend/src/: app.css  app.html
svelte-frontend/src/routes/: +layout.svelte  +page.svelte
tests/: test_abc.py  test_api.py  test_websocket.py
